--- a/samples/PluginDemo/res/values-nl/strings.xml
+++ b/samples/PluginDemo/res/values-nl/strings.xml
@@ -58,7 +58,7 @@
     <item msgid="5242689844155076377">":-("</item>
     <item msgid="521632995149320343">";-)"</item>
     <item msgid="3442897533435789796">":-P"</item>
-    <item msgid="682698687423187022">"Err:502"</item>
+    <item msgid="682698687423187022">"#NAME?"</item>
     <item msgid="1531701168660725626">":-*"</item>
     <item msgid="7958357467119008619">":O"</item>
     <item msgid="4638775565490840154">"B-)"</item>
