--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -15,16 +15,22 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="im_label" msgid="6289028202073124911">"MI"</string>
-    <!-- no translation found for landing_page_title (8575938257482637474) -->
+    <!-- no translation found for ro_perm_label (4791213266570841712) -->
     <skip />
+    <!-- no translation found for ro_perm_desc (2030191017293726405) -->
+    <skip />
+    <!-- no translation found for wo_perm_label (2275102271914312340) -->
+    <skip />
+    <!-- no translation found for wo_perm_desc (4332792325927331086) -->
+    <skip />
+    <string name="im_label" msgid="6289028202073124911">"MI"</string>
+    <string name="landing_page_title" msgid="8575938257482637474">"Chat: seleccionar una cuenta"</string>
     <string name="menu_add_account" msgid="5762363412622888397">"Añadir cuenta"</string>
     <string name="menu_edit_account" msgid="2909998494159263063">"Editar cuenta"</string>
     <string name="menu_remove_account" msgid="6821008426177540869">"Eliminar cuenta"</string>
     <string name="menu_sign_out_all" msgid="4796813055998684330">"Salir de todo"</string>
     <string name="choose_account_title" msgid="6660096418433575680">"Chat: seleccionar una cuenta"</string>
-    <!-- no translation found for conversations (7338245838564623519) -->
-    <skip />
+    <string name="conversations" msgid="7338245838564623519">"(<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="menu_cancel_signin" msgid="146078926243968887">"Cancelar acceso"</string>
     <string name="menu_add_contact" msgid="6315091944808434095">"Añadir contacto"</string>
     <string name="menu_remove_contact" msgid="3306468526492774925">"Eliminar contacto"</string>
@@ -43,8 +49,7 @@
     <string name="menu_plus" msgid="5000617247235760106">"MENU+"</string>
     <string name="default_input_title" msgid="6182729628894599563">"Introducción de texto"</string>
     <string name="confirm" msgid="3229086014444547636">"Confirmar"</string>
-    <!-- no translation found for signout_all_confirm_message (4442995839737460513) -->
-    <skip />
+    <string name="signout_all_confirm_message" msgid="4442995839737460513">"¿Quieres salir de todos los servicios?"</string>
     <string name="confirm_delete_contact" msgid="1364595657359357114">"El contacto \"<xliff:g id="USER">%1$s</xliff:g>\" se eliminará."</string>
     <string name="confirm_block_contact" msgid="2490910366424078491">"El contacto \"<xliff:g id="USER">%1$s</xliff:g>\" se bloqueará."</string>
     <string name="confirm_unblock_contact" msgid="2194464819104507216">"El contacto \"<xliff:g id="USER">%1$s</xliff:g>\" se desbloqueará."</string>
