--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -15,16 +15,22 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="im_label" msgid="6289028202073124911">"Chat"</string>
-    <!-- no translation found for landing_page_title (8575938257482637474) -->
+    <!-- no translation found for ro_perm_label (4791213266570841712) -->
     <skip />
+    <!-- no translation found for ro_perm_desc (2030191017293726405) -->
+    <skip />
+    <!-- no translation found for wo_perm_label (2275102271914312340) -->
+    <skip />
+    <!-- no translation found for wo_perm_desc (4332792325927331086) -->
+    <skip />
+    <string name="im_label" msgid="6289028202073124911">"Chat"</string>
+    <string name="landing_page_title" msgid="8575938257482637474">"Chat : sélectionner un compte"</string>
     <string name="menu_add_account" msgid="5762363412622888397">"Ajouter un compte"</string>
-    <string name="menu_edit_account" msgid="2909998494159263063">"Modifier le compte"</string>
+    <string name="menu_edit_account" msgid="2909998494159263063">"Modifier un compte"</string>
     <string name="menu_remove_account" msgid="6821008426177540869">"Supprimer le compte"</string>
     <string name="menu_sign_out_all" msgid="4796813055998684330">"Se déconnecter de tout"</string>
-    <string name="choose_account_title" msgid="6660096418433575680">"Conversation : sélectionnez un compte"</string>
-    <!-- no translation found for conversations (7338245838564623519) -->
-    <skip />
+    <string name="choose_account_title" msgid="6660096418433575680">"Chat : sélectionner un compte"</string>
+    <string name="conversations" msgid="7338245838564623519">"(<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
     <string name="menu_cancel_signin" msgid="146078926243968887">"Annuler la connexion"</string>
     <string name="menu_add_contact" msgid="6315091944808434095">"Ajouter un contact"</string>
     <string name="menu_remove_contact" msgid="3306468526492774925">"Supprimer le contact"</string>
@@ -43,8 +49,7 @@
     <string name="menu_plus" msgid="5000617247235760106">"Menu+"</string>
     <string name="default_input_title" msgid="6182729628894599563">"Entrée"</string>
     <string name="confirm" msgid="3229086014444547636">"Confirmer"</string>
-    <!-- no translation found for signout_all_confirm_message (4442995839737460513) -->
-    <skip />
+    <string name="signout_all_confirm_message" msgid="4442995839737460513">"Voulez-vous vous déconnecter de tous les services ?"</string>
     <string name="confirm_delete_contact" msgid="1364595657359357114">"Le contact \"<xliff:g id="USER">%1$s</xliff:g>\" sera supprimé."</string>
     <string name="confirm_block_contact" msgid="2490910366424078491">"Le contact \"<xliff:g id="USER">%1$s</xliff:g>\" sera bloqué."</string>
     <string name="confirm_unblock_contact" msgid="2194464819104507216">"Le contact \"<xliff:g id="USER">%1$s</xliff:g>\" sera débloqué."</string>
