--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -15,14 +15,10 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- no translation found for ro_perm_label (4791213266570841712) -->
-    <skip />
-    <!-- no translation found for ro_perm_desc (2030191017293726405) -->
-    <skip />
-    <!-- no translation found for wo_perm_label (2275102271914312340) -->
-    <skip />
-    <!-- no translation found for wo_perm_desc (4332792325927331086) -->
-    <skip />
+    <string name="ro_perm_label" msgid="4791213266570841712">"阅读即时消息"</string>
+    <string name="ro_perm_desc" msgid="2030191017293726405">"允许应用程序从即时消息内容提供者处读取数据。"</string>
+    <string name="wo_perm_label" msgid="2275102271914312340">"撰写即时消息"</string>
+    <string name="wo_perm_desc" msgid="4332792325927331086">"允许应用程序向即时消息内容提供者写入数据。"</string>
     <string name="im_label" msgid="6289028202073124911">"即时消息"</string>
     <string name="landing_page_title" msgid="8575938257482637474">"聊天 - 选择一个帐户"</string>
     <string name="menu_add_account" msgid="5762363412622888397">"添加帐户"</string>
@@ -69,7 +65,7 @@
     <string name="sign_in" msgid="6204326200860136567">"登录"</string>
     <string name="signing_in_to" msgid="2689649632858697221">"正在登录 <xliff:g id="ACCOUNT">%1$s</xliff:g>"</string>
     <string name="signing_in_wait" msgid="987357161364666888">"正在登录..."</string>
-    <string name="bg_data_prompt_title" msgid="4861800723853178111">"背景数据已禁用"</string>
+    <string name="bg_data_prompt_title" msgid="4861800723853178111">"已停用背景数据"</string>
     <string name="bg_data_prompt_message" msgid="2343305645142823544">"<xliff:g id="PROVIDER">%1$s</xliff:g> 需要启用背景数据。"</string>
     <string name="bg_data_prompt_ok" msgid="3443385427882751532">"启用"</string>
     <string name="bg_data_prompt_cancel" msgid="7206105589826174638">"退出"</string>
