--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -15,14 +15,10 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- no translation found for ro_perm_label (4791213266570841712) -->
-    <skip />
-    <!-- no translation found for ro_perm_desc (2030191017293726405) -->
-    <skip />
-    <!-- no translation found for wo_perm_label (2275102271914312340) -->
-    <skip />
-    <!-- no translation found for wo_perm_desc (4332792325927331086) -->
-    <skip />
+    <string name="ro_perm_label" msgid="4791213266570841712">"阅读即时消息"</string>
+    <string name="ro_perm_desc" msgid="2030191017293726405">"允许应用程序从即时消息内容提供者处读取数据。"</string>
+    <string name="wo_perm_label" msgid="2275102271914312340">"撰写即时消息"</string>
+    <string name="wo_perm_desc" msgid="4332792325927331086">"允许应用程序向即时消息内容提供者写入数据。"</string>
     <string name="im_label" msgid="6289028202073124911">"即时消息"</string>
     <string name="landing_page_title" msgid="8575938257482637474">"聊天 - 选择一个帐户"</string>
     <string name="menu_add_account" msgid="5762363412622888397">"添加帐户"</string>
