--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -117,11 +117,11 @@
     <string name="hide_offline_contacts" msgid="8017909244732772990">"오프라인 주소록 숨기기"</string>
     <string name="notification_group_title" msgid="4944275706770811080">"알림 설정"</string>
     <string name="notification_enabled_title" msgid="6447889693376465773">"메신저 알림"</string>
-    <string name="notification_enabled_summary" msgid="2090889893066171466">"메신저가 오면 상태 표시줄에 알림"</string>
+    <string name="notification_enabled_summary" msgid="2090889893066171466">"메시지가 오면 상태 표시줄에 알림"</string>
     <string name="notification_vibrate_title" msgid="5603532186091800924">"진동"</string>
-    <string name="notification_vibrate_summary" msgid="1875275321875946598">"메신저가 오면 진동"</string>
+    <string name="notification_vibrate_summary" msgid="1875275321875946598">"메시지가 오면 진동"</string>
     <string name="notification_sound_title" msgid="8367990268592958299">"사운드"</string>
-    <string name="notification_sound_summary" msgid="3634976543811200858">"메신저가 오면 벨소리 재생"</string>
+    <string name="notification_sound_summary" msgid="3634976543811200858">"메시지가 오면 벨소리 재생"</string>
     <string name="notification_ringtone_title" msgid="4847700898968990954">"벨소리 선택"</string>
     <string name="invitation_prompt" msgid="1776461436395016582">"<xliff:g id="USER">%1$s</xliff:g>님이 그룹 채팅에 초대하셨습니다."</string>
     <string name="invitation_sent_prompt" msgid="2542342110609014148">"<xliff:g id="USER">%1$s</xliff:g>님에게 초대장을 보냈습니다."</string>
