--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -97,14 +97,14 @@
     <string name="contact_online" msgid="4241843267436748586">"<xliff:g id="USER">%1$s</xliff:g> está conectado"</string>
     <string name="contact_away" msgid="2333627320542883164">"<xliff:g id="USER">%1$s</xliff:g> está ausente"</string>
     <string name="contact_busy" msgid="9175172991334146704">"<xliff:g id="USER">%1$s</xliff:g> está ocupado"</string>
-    <string name="contact_offline" msgid="7054903259540426223">"<xliff:g id="USER">%1$s</xliff:g> está desconectado"</string>
+    <string name="contact_offline" msgid="7054903259540426223">"<xliff:g id="USER">%1$s</xliff:g> está desconectado/a"</string>
     <string name="contact_joined" msgid="6713312815095658394">"<xliff:g id="USER">%1$s</xliff:g> se ha unido al chat"</string>
     <string name="contact_left" msgid="3020686291216941829">"<xliff:g id="USER">%1$s</xliff:g> se ha desconectado"</string>
     <string name="time_stamp" format="date" msgid="8952691401963972802">"'Enviado a las '<xliff:g id="HOUR">hh</xliff:g>':'<xliff:g id="MINUTE">mm</xliff:g>' '<xliff:g id="AMPM">a</xliff:g>' el '<xliff:g id="DATE">EEEE</xliff:g>"</string>
     <string name="send" msgid="2726588254020771734">"Enviar"</string>
     <string name="msg_sent_failed" msgid="4209970218075996979">"No se ha podido enviar el mensaje."</string>
     <string name="disconnected_warning" msgid="6798248948843269795">"Se ha perdido la conexión con el servidor. Los mensajes se enviarán cuando se restablezca la conexión."</string>
-    <string name="contact_offline_warning" msgid="8822964251595561504">"<xliff:g id="USER_0">%1$s</xliff:g> está desconectado. Los mensajes enviados se entregarán cuando <xliff:g id="USER_1">%1$s</xliff:g> vuelva a conectarse."</string>
+    <string name="contact_offline_warning" msgid="8822964251595561504">"<xliff:g id="USER_0">%1$s</xliff:g> está desconectado/a. Los mensajes enviados se entregarán cuando <xliff:g id="USER_1">%1$s</xliff:g> vuelva a conectarse."</string>
     <string name="contact_not_in_list_warning" msgid="2411313232707156524">"<xliff:g id="USER">%1$s</xliff:g> no figura en tu lista de contactos."</string>
     <string name="select_link_title" msgid="5020179468567358399">"Seleccionar enlace"</string>
     <string name="empty_chat_list" msgid="7268903855432844937">"No hay ningún chat activo."</string>
